# PressureSensor

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json
.devcontainer/: devcontainer.json
.github/workflows/: building_testing.yml  docker_building.yml
Core/: CMakeLists.txt
Core/Inc/: main.h  stm32f1xx_it.h
Core/Src/: adc.c  gpio.c  main.cpp  stm32f1xx_hal_msp.c  stm32f1xx_it.c  tim.c
Drivers/STM32F1xx_HAL_Driver/: CMakeLists.txt
cubeGen/: .mxproject  145654.ioc
